@@ -1,9 +1,12 @@
 package net.vanderkast.fs4r.simple;
 
-import net.vanderkast.fs4r.domain.Store;
+import net.vanderkast.fs4r.domain.Write;
+import net.vanderkast.fs4r.domain.dto.WriteDto;
+import net.vanderkast.fs4r.dto.WriteDtoImpl;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -12,8 +15,8 @@ import java.nio.file.Path;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-class JustStoreTest {
-    private final Store store = new JustStore();
+class JustWriteTest {
+    private final Write write = new JustWrite();
 
     @Test
     void write(@TempDir Path tmp) throws IOException {
@@ -21,9 +24,12 @@ class JustStoreTest {
         var file = tmp.resolve("write_test");
         assertTrue(Files.notExists(file));
         var content = "write content";
+        var model = new WriteDtoImpl(file,
+                new ByteArrayInputStream(content.getBytes(StandardCharsets.UTF_8)),
+                true);
 
         // when
-        store.write(file, content.getBytes(StandardCharsets.UTF_8));
+        write.write(model);
 
         // then
         var actual = Files.readString(file);
@@ -33,14 +39,17 @@ class JustStoreTest {
     @Test
     void append(@TempDir Path tmp) throws IOException {
         // given
-        var contentSplit = new String[]{"con", "tent"};
-        var file = Files.write(tmp.resolve("append_test"), contentSplit[0].getBytes(StandardCharsets.UTF_8));
+        var file = Files.writeString(tmp.resolve("append"), "con");
+        assertTrue(Files.exists(file));
+        var dto = new WriteDtoImpl(file,
+                new ByteArrayInputStream("tent".getBytes(StandardCharsets.UTF_8)),
+                false);
 
         // when
-        store.append(file, contentSplit[1].getBytes(StandardCharsets.UTF_8));
+        write.write(dto);
 
         // then
-        var actual = Files.readString(file);
-        assertEquals(contentSplit[0] + contentSplit[1], actual);
+        var read = Files.readString(file);
+        assertEquals("content", read);
     }
 }
